# rust-by-example

./: Cargo.toml  README.md
src/: arrays_and_slices.rs  debug.rs  display.rs  formatted_print.rs  formatting.rs  hello_world.rs  structures.rs  tuples.rs
src/custom_types/: type_aliases.rs
src/hello_world/: debug.rs  display.rs
src/types/: casting.rs
