[package]
name = "rust-by-example"
version = "0.0.0"

[[bin]]
name = "hello_world"
path = "src/hello_world/hello_world.rs"

[[bin]]
name = "comments"
path = "src/hello_world/comments.rs"

[[bin]]
name = "formatted_print"
path = "src/hello_world/formatted_print.rs"

[[bin]]
name = "debug"
path = "src/hello_world/debug.rs"

[[bin]]
name = "display"
path = "src/hello_world/display.rs"

[[bin]]
name = "testcase_list"
path = "src/hello_world/testcase_list.rs"

[[bin]]
name = "formatting"
path = "src/hello_world/formatting.rs"

[[bin]]
name = "literals_and_operators"
path = "src/primitives/literals_and_operators.rs"

[[bin]]
name = "tuples"
path = "src/primitives/tuples.rs"

[[bin]]
name = "arrays_and_slices"
path = "src/primitives/arrays_and_slices.rs"

[[bin]]
name = "structures"
path = "src/custom_types/structures.rs"

[[bin]]
name = "enums"
path = "src/custom_types/enums.rs"

[[bin]]
name = "type_aliases"
path = "src/custom_types/type_aliases.rs"

[[bin]]
name = "use"
path = "src/custom_types/use.rs"

[[bin]]
name = "c-like"
path = "src/custom_types/c-like.rs"

[[bin]]
name = "testcase_linked_list"
path = "src/custom_types/testcase_linked_list.rs"

[[bin]]
name = "constants"
path = "src/custom_types/constants.rs"

[[bin]]
name = "variable_bindings"
path = "src/variable_bindings/variable_bindings.rs"

[[bin]]
name = "mutability"
path = "src/variable_bindings/mutability.rs"

[[bin]]
name = "scope"
path = "src/variable_bindings/scope.rs"

[[bin]]
name = "shadowing"
path = "src/variable_bindings/shadowing.rs"

[[bin]]
name = "declare_first"
path = "src/variable_bindings/declare_first.rs"

[[bin]]
name = "freezing"
path = "src/variable_bindings/freezing.rs"

[[bin]]
name = "casting"
path = "src/types/casting.rs"

[[bin]]
name = "literals"
path = "src/types/literals.rs"

[[bin]]
name = "inference"
path = "src/types/inference.rs"

[[bin]]
name = "aliasing"
path = "src/types/aliasing.rs"

[[bin]]
name = "from"
path = "src/conversion/from.rs"

[[bin]]
name = "into"
path = "src/conversion/into.rs"

[[bin]]
name = "tryfrom_and_tryinto"
path = "src/conversion/tryfrom_and_tryinto.rs"

[[bin]]
name = "converting_to_string"
path = "src/conversion/converting_to_string.rs"

[[bin]]
name = "parsing_a_string"
path = "src/conversion/parsing_a_string.rs"

[[bin]]
name = "expressions"
path = "src/expressions.rs"

[[bin]]
name = "if-else"
path = "src/flow_of_control/if-else.rs"

[[bin]]
name = "loop"
path = "src/flow_of_control/loop.rs"

[[bin]]
name = "nesting_and_labels"
path = "src/flow_of_control/nesting_and_labels.rs"

[[bin]]
name = "returning_from_loops"
path = "src/flow_of_control/returning_from_loops.rs"

[[bin]]
name = "while"
path = "src/flow_of_control/while.rs"
